<resources>
    <string name="app_name">Logbook</string>
    <string name="label_user_id">User Id</string>
    <string name="label_password">Password</string>
    <string name="label_login_button">Login</string>
    <string name="const_hint_user_name">username</string>
    <string name="const_hint_password">password</string>
    <string name="welcome_message">Welcome to LogBook!</string>
    <string name="no_party_message">No parties defined as yet</string>
    <string name="indian_rupee">INR</string>
    <string name="us_dollar">USD</string>
    <string name="uae_dhiram">AED</string>

    <string name="menu_parties">Parties</string>
    <string name="party_screen_title">Party Maintenance</string>
    <string name="add_party">Add Party</string>
    <string name="party_name">Party Name</string>
    <string name="save_party">Save Party</string>
    <string name="title_save_party_new">New Party</string>
    <string name="title_save_party_edit">Edit Party</string>
    <string name="enter_party_name">Enter party name to save</string>
    <string name="party_saved">Party successfully saved!</string>
    <string name="party_not_saved">Unable to save the party!</string>
    <!--ERROR MESSAGES-->
    <string name="unable_to_process_data">Unable to process data</string>
    <string name="unable_to_read_from_server">Unable to read data from server</string>
    <string name="no_data_from_server">No data returned by server</string>
    <string name="no_communication">Unable to communicate with ser ver</string>
    <string name="no_download">Unable to download list</string>

    <string name="menu_transactions">Transactions</string>
    <string name="transactions_screen_title">Transactions</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="transactions_load">Load</string>
    <string name="menu_add_transaction_direct">Direct Transaction</string>
    <string name="menu_add_transaction_multi_direct">Direct Transfer - Multiple</string>
    <string name="menu_add_transaction_currency">Currency Transfer</string>
    <string name="menu_add_transaction_party">Party Transfer</string>

    <string name="title_add_direct_transaction">Direct Transaction</string>
    <string name="txn_date">Transaction Date</string>
    <string name="txn_date_small">Date</string>
    <string name="txn_date_missing">Select transaction date</string>
    <string name="txn_amount">Amount</string>
    <string name="txn_amount_is_missing">Enter a valid amount</string>
    <string name="txn_comments">Comments</string>
    <string name="button_text_save_transaction">Save</string>
    <string name="button_text_save_transactions">Save Transactions</string>
    <string name="message_transaction_saved">Transaction saved</string>
    <string name="message_transaction_not_saved">Unable to save transaction</string>

    <string-array name="txn_type">
        <item>Credit</item>
        <item>Debit</item>
    </string-array>

    <string-array name="currency_txn_type">
        <item>Buy</item>
        <item>Sell</item>
    </string-array>

    <string-array name="txn_currency">
        <item>INR</item>
        <item>USD</item>
        <item>AED</item>
    </string-array>

    <string-array name="txn_exchange_direction">
        <item>Forward</item>
        <item>Reverse</item>
    </string-array>

    <string name="title_add_currency_transaction">Currency Transfer</string>
    <string name="txn_exchange_rate">Rate</string>
    <string name="txn_exchange_rate_is_missing">Enter a valid exchange rate</string>
    <string name="txn_exchange_same_currency">Select different currencies</string>

    <string name="title_add_party_transaction">Party Transfer</string>
    <string name="txn_party_same_party">Select different parties</string>

    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="button_text_delete_transaction">Delete</string>
    <string name="message_transaction_deleted">Transaction deleted</string>
    <string name="message_transaction_not_deleted">Unable to delete transaction</string>
    <string name="delete_confirmation">Are you sure you want to delete this transaction?</string>
    <string name="button_text_delete_positive">Yes! Delete</string>
    <string name="button_text_delete_negative">No</string>
    <string name="message_invalid_action">Invalid action</string>

    <string name="menu_reports">Reports</string>
    <string name="reports_screen_title">Reports</string>
    <string name="no_party_selected">Please select at-least one party</string>

    <string name="dummy_text_short">dummy text</string>
    <string name="dummy_text_long">This is dummy text</string>

    <string name="multi_select_title">Multiple Selections</string>

    <string name="no_txn_data">No transaction to edit</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_user_maintenance">User Maintenance</string>
    <string name="users_screen_title">Users</string>
    <string name="add_user">Add User</string>
    <string name="edit_user">Edit User</string>
    <string name="text_user_id">User Id</string>
    <string name="text_user_name">User Name</string>
    <string name="text_user_password">Password</string>
    <string name="text_user_profile">Profile</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="button_text_save_user">Save User</string>
    <string name="button_text_edit_user">Edit User</string>
    <string name="message_user_id_missing">Enter user id</string>
    <string name="message_user_name_missing">Enter user name</string>
    <string name="message_user_password_missing">Enter user password</string>
    <string name="message_user_saved">User saved successfully</string>
    <string name="message_user_not_saved">User could not be saved</string>
    <string name="message_user_updated">User updated successfully</string>
    <string name="message_user_not_updated">User could not be updated</string>
    <string name="message_password_saved">Password saved successfully</string>
    <string name="message_password_not_saved">Password could not be saved</string>

    <string-array name="usr_profile">
        <item>Admin</item>
        <item>Staff</item>
    </string-array>

    <string name="settings_screen_title">Settings</string>
    <string name="section_password">Password update</string>
    <string name="section_general">General</string>
    <string name="text_new_password">New Password</string>
    <string name="text_existing_password">Current Password</string>
    <string name="message_setting_invalid_password">New and Repeat passwords should be same</string>
    <string name="message_setting_invalid_old_password">Enter old password</string>
    <string name="message_setting_invalid_new_password">Enter new password</string>
    <string name="button_text_update_password">Update Password</string>
    <string name="button_text_logout">Logout</string>

    <string name="menu_groups">Groups</string>
    <string name="groups_screen_title">Groups</string>
    <string name="group_name">Group Name</string>
    <string name="save_group">Save Group</string>
    <string name="menu_add_group">Add Group</string>
    <string name="add_group">Add Group</string>
    <string name="title_save_group_new">Add Group</string>
    <string name="title_save_group_edit">Edit Group</string>
    <string name="message_group_saved">Group saved</string>
    <string name="message_group_not_saved">Group could not be saved</string>
    <string name="message_group_updated">Group updated successfully</string>
    <string name="message_group_not_updated">Group could not be updated</string>
    <string name="message_enter_group">Enter group name to save</string>
</resources>
