<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_groups"
        android:enabled="true"
        android:icon="@drawable/ic_group_work_black_24dp"
        android:title="@string/menu_groups" />

    <item
        android:id="@+id/menu_parties"
        android:enabled="true"
        android:title="@string/menu_parties"
        android:icon="@drawable/ic_people_black_24dp" />
    <item
        android:id="@+id/menu_transactions"
        android:enabled="true"
        android:title="@string/menu_transactions"
        android:icon="@drawable/ic_compare_arrows_black_24dp" />

    <item
        android:id="@+id/menu_reports"
        android:enabled="true"
        android:title="@string/menu_reports"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp" />

    <item
        android:id="@+id/menu_user_maintenance"
        android:enabled="true"
        android:title="@string/menu_user_maintenance"
        android:icon="@drawable/ic_person_black_24dp" />

    <!--    <item-->
    <!--        android:id="@+id/menu_settings"-->
    <!--        android:enabled="true"-->
    <!--        android:title="@string/menu_settings"-->
    <!--        android:icon="@drawable/ic_settings_black_24dp" />-->

</menu>