<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add_direct_transaction"
        android:title="@string/menu_add_transaction_direct"
        android:icon="@drawable/ic_add_circle_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_add_multi_direct_transaction"
        android:title="@string/menu_add_transaction_multi_direct"
        android:icon="@drawable/ic_library_add_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_add_currency_transfer"
        android:title="@string/menu_add_transaction_currency"
        android:icon="@drawable/ic_currency_on_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_add_party_transfer"
        android:title="@string/menu_add_transaction_party"
        android:icon="@drawable/ic_transfer_circle_black_24dp"
        app:showAsAction="ifRoom" />

</menu>