<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/direct_transaction_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewDirectionTransaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/txn_direct_party_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_height"
                android:spinnerMode="dialog" />


            <Spinner
                android:id="@+id/txn_direct_currency"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_height"
                android:spinnerMode="dialog"/>

            <Spinner
                android:id="@+id/txn_direct_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

            <Button
                android:id="@+id/txn_direct_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txn_date" />

            <EditText
                android:id="@+id/txn_direct_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/txn_amount"
                android:ems="10"
                android:hint="@string/txn_amount"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/txn_direct_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/txn_comments"
                android:ems="10"
                android:hint="@string/txn_comments"
                android:inputType="text" />

            <Button
                android:id="@+id/save_direct_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_text_save_transaction"
                android:onClick="saveDirectTransaction"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>