<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/currency_transaction_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewCurrencyTransaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/txn_currency_party_name"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spinner_height"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/txn_currency_type"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spinner_height"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/txn_currency_first"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spinner_height"
                    android:spinnerMode="dialog"
                    android:layout_weight="1"/>
                <Spinner
                    android:id="@+id/txn_currency_second"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spinner_height"
                    android:spinnerMode="dialog"
                    android:layout_weight="1"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/txn_currency_exchange_rate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/txn_exchange_rate"
                    android:ems="10"
                    android:hint="@string/txn_exchange_rate"
                    android:inputType="numberDecimal"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/txn_currency_exchange_direction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/txn_currency_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txn_date_small"
                    android:layout_weight="1"/>
            </LinearLayout>
            <EditText
                android:id="@+id/txn_currency_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/txn_amount"
                android:ems="10"
                android:hint="@string/txn_amount"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/txn_currency_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/txn_comments"
                android:ems="10"
                android:hint="@string/txn_comments"
                android:inputType="text" />

            <Button
                android:id="@+id/save_currency_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_text_save_transaction" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>